<resources>
    <string name="app_name">StudyNotesApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_you_username">Enter your username</string>
    <string name="enter_you_password_hint">Enter you password</string>
    <string name="or_login_with_email">Or login with email</string>
    <string name="log_in_btn">log in</string>
    <string name="email_hint">email@gmail.com</string>
    <string name="create_username">Create username</string>
    <string name="sign_up">Sign up</string>
    <string name="view_all">View all</string>
    <string name="tvFoldersTitle">Folders</string>
    <string name="tvSetsTitle">Sets</string>
    <string name="sign_up_for_free">Sign up for free</string>
    <string name="or_log_in">Or log in</string>
    <string name="create_study_set">Create study set</string>
    <string name="create_folder">Create Folder</string>
    <string name="folder_name">Folder name</string>
    <string name="description_optional">optional</string>
    <string name="cancel">Cancel</string>
    <string name="add_set_menu_item_title">Create set</string>
    <string name="set_list_title">Sets</string>
    <string name="set_name_hint">Set name</string>
</resources>