<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".login.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/registerAppBarLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/registerToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                app:title="Register" />

        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registerEmailInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            app:helperText="EMAIL ADDRESS"
            app:helperTextEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerAppBarLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etRegisterEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email_hint" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registerUsernameInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:helperText="USERNAME"
            app:helperTextEnabled="true"
            app:layout_constraintEnd_toEndOf="@+id/registerEmailInputLayout"
            app:layout_constraintStart_toStartOf="@+id/registerEmailInputLayout"
            app:layout_constraintTop_toBottomOf="@id/registerEmailInputLayout">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etRegisterUsername"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/create_username" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registerPasswordInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:endIconMode="password_toggle"
            app:helperText="PASSWORD"
            app:helperTextEnabled="true"
            app:layout_constraintEnd_toEndOf="@+id/registerUsernameInputLayout"
            app:layout_constraintStart_toStartOf="@+id/registerUsernameInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/registerUsernameInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etRegisterPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/enter_you_password_hint"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/registerPasswordInputLayout"
            app:layout_constraintStart_toStartOf="@+id/registerPasswordInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/registerPasswordInputLayout" />

        <ProgressBar
            android:id="@+id/registerProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSignUp" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>