<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/homeAppBarLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:titleTextColor="@color/white"
                app:title="Home" />

        </com.google.android.material.appbar.AppBarLayout>


        <TextView
            android:id="@+id/tvSetsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/tvSetsTitle"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/tvViewAllSets"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/homeAppBarLayout"
            app:layout_constraintVertical_chainStyle="spread" />

        <TextView
            android:id="@+id/tvFoldersTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/tvFoldersTitle"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/tvViewAllFolders"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rvSets" />

        <TextView
            android:id="@+id/tvViewAllSets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_all"
            android:textColor="@color/turquise"
            app:layout_constraintBottom_toBottomOf="@+id/tvSetsTitle"
            app:layout_constraintEnd_toStartOf="@+id/ivRightArrow"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@id/tvSetsTitle"
            app:layout_constraintTop_toTopOf="@+id/tvSetsTitle" />

        <ImageView
            android:id="@+id/ivRightArrow"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="32dp"
            android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
            app:layout_constraintBottom_toBottomOf="@+id/tvViewAllSets"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvViewAllSets" />


        <TextView
            android:id="@+id/tvViewAllFolders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_all"
            android:textColor="@color/turquise"
            app:layout_constraintBottom_toBottomOf="@+id/tvFoldersTitle"
            app:layout_constraintEnd_toStartOf="@+id/ivRightArrow2"
            app:layout_constraintStart_toEndOf="@id/tvFoldersTitle"
            app:layout_constraintTop_toTopOf="@+id/tvFoldersTitle" />

        <ImageView
            android:id="@+id/ivRightArrow2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="32dp"
            android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
            app:layout_constraintBottom_toBottomOf="@+id/tvViewAllFolders"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvViewAllFolders" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSets"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:padding="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSetsTitle"
            app:layout_constraintVertical_chainStyle="spread_inside"
            tools:listitem="@layout/set_list_item" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvFolderList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:padding="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvFoldersTitle"
            app:layout_constraintVertical_chainStyle="spread"
            tools:listitem="@layout/folder_list_item" />


    </androidx.constraintlayout.widget.ConstraintLayout>



</layout>